--- a/docs/ios/tracker/am6.mdx
+++ b/docs/ios/tracker/am6.mdx
@@ -29,10 +29,10 @@ sidebar_position: 5
 /**
  AM6ConnectFailed
 {
-    AM6ConnectErrorID = 2;
-    ID = "0A757F50-1508-A265-FCC6-8278888FDC4F";
+    AM6ConnectErrorID = 0;
+    DeviceName = AM6;
     ProtocolString = "com.jiuan.AM6V10";
-    SerialNumber = 004D321BD2DE;
+    SerialNumber = 004D321BD2DC;
 }
 
 typedef NS_ENUM(NSUInteger, AM6DeviceConnectError) {
