--- a/docs/android/tracker/am6.mdx
+++ b/docs/android/tracker/am6.mdx
@@ -76,20 +76,20 @@ Am6Control control = iHealthDevicesManager.getInstance().getAm6Control(mDeviceMa
 
 :::info
 1. AM6 is used for the first time or is in an unbound state, and AM6 displays a QR code.
-2. Call the API bindUser, AM6 enters the binding state.
+2. Call the API startBind, AM6 enters the binding state.
 3. Call the API bindUserSuccess and pass user id to AM6, AM6 will save user id, and then will display UI of successful binding.
 4. Call the API bindUserFail, AM6 will display UI of failure binding, and then fall back to UI of QR code.
 :::
 
 ![am6 binding](/am6_binding.png)
 
-### Bind user
+### Start to Bind user
 
 Am6 enters the binding state.
 
 ```java
 Am6Control control = iHealthDevicesManager.getInstance().getAm6Control(mDeviceMac);
-control.bindUser();
+control.startBind();
 ```
 
 ```java
@@ -315,19 +315,19 @@ private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallb
 | Others | 0 |
 | Call | 1 |
 | SMS | 2 |
-| WYZE | 3 |
+| iHealth | 3 |
 | Facebook | 4 |
 | Wechat | 5 |
 | Instagram | 6 |
 | Twitter | 7 |
-| Facebook messager | 8 |
+| Facebook messenger | 8 |
 | WhatsApp | 9 |
 | Gmail | 10 |
 | Email | 11 |
-| Yahoo | 12 |
+| Yahoo mail| 12 |
 | Spotify | 13 |
 | Apple music | 14 |
-| Youtube | 15 |
+| YouTube | 15 |
 | Uber | 16 |
 | Google map | 17 |
 | Google calendar | 18 |
@@ -341,10 +341,10 @@ Am6Control control = iHealthDevicesManager.getInstance().getAm6Control(mDeviceMa
  * @param date timestamp
  * @param status when message type is Call, the status can be set to 0: call ansered; 1: missed call; 2: call was hung up
  * @param type message type        
- * @param title Maximum is 128 characters
- * @param content Maximum is 512 characters
+ * @param title Maximum is 128 UTF-8 byte
+ * @param content Maximum is 512 UTF-8 byte
  */
-control.notifyMessage(long date, int status, int type, String title, String content);
+control.notifyMessage(long date, int status, int type, byte[] title, byte[] content);
 ```
 
 ```java
@@ -600,8 +600,8 @@ private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallb
 Am6Control control = iHealthDevicesManager.getInstance().getAm6Control(mDeviceMac);
 /**
  * @param type 0: close; 1: open
- * @param start This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1440
- * @param end   This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1440
+ * @param start This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1439
+ * @param end   This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1439
  */
 control.setSedentaryRemind(int enable, int start, int end);
 ```
@@ -684,8 +684,8 @@ private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallb
 Am6Control control = iHealthDevicesManager.getInstance().getAm6Control(mDeviceMac);
 /**
  * @param enable 0: close; 1: open
- * @param start This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1440
- * @param end   This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1440
+ * @param start This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1439
+ * @param end   This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1439
  */
 control.setRaiseToLight(int enable, int start, int end);
 ```
@@ -768,8 +768,8 @@ private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallb
 Am6Control control = iHealthDevicesManager.getInstance().getAm6Control(mDeviceMac);
 /**
  * @param type 0: close; 1: open
- * @param start This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1440
- * @param end   This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1440
+ * @param start This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1439
+ * @param end   This is the minute from the day starts, such as 10:10 am, it is 60 * 10 + 10, the range is 0 ~ 1439
  */
 control.setDoNotDisturbMode(int enable, int start, int end);
 ```
